# doc-assisstant

./: .claudeignore  .gitignore  CLAUDE.md  README.md  build-dmg.sh  build.sh  doc-assistant.spec
backend/: .coverage  config.example.yaml  config.yaml  environment.yml  pyproject.toml
backend/app/: __main__.py  config.py  main.py  paths.py  settings_service.py  task_manager.py
backend/app/api/: deps.py  middleware.py
backend/app/db/: vector_store.py
backend/app/generation/: docx_formatter.py  intent_parser.py  pptx_generator.py  pptx_task_manager.py  prompt_builder.py  template_manager.py  word_parser.py  writer.py  writer_service.py
backend/app/ingestion/: chunker.py  classifier.py  decompressor.py  extractor.py  ingester.py
backend/app/llm/: base.py  claude_provider.py  factory.py  ollama_provider.py  openai_provider.py
backend/app/models/: chunk.py  document.py  generation.py  search.py  task.py
backend/app/retrieval/: baidu_provider.py  file_service.py  fusion.py  local_search.py  online_search.py  query_rewriter.py  retriever.py
backend/tests/: conftest.py  test_config.py  test_config_word_template.py  test_file_download.py  test_file_upload.py  test_main.py  test_middleware.py  test_paths.py  test_settings_extended.py  test_settings_service.py  test_stats.py  test_task_manager.py  test_ws_tasks.py
backend/tests/test_api/: test_file_routes.py  test_generation_routes.py  test_retrieval_routes.py  test_settings_routes.py  test_template_routes.py
backend/tests/test_db/: test_vector_store.py
backend/tests/test_generation/: test_docx_formatter.py  (+8 more)
(+126 files in other folders)
